--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,10 @@ h4 {
   margin-top: 1rem;
 }
 
+.emailico {
+  margin-top: .3rem;
+}
+
 .fourthinfo .second {
   grid-column: 2;
   margin-top: 8rem;
